@@ -406,6 +406,7 @@ $(document).ready(function() {
 											<li id="mDevices2"><a id="cDevices" href="javascript:SwitchLayout('Devices')"><img src="images/devices.png"> Devices</a></li>
 											<li id="mCam"><a id="cCam" href="javascript:SwitchLayout('Cam')"><img src="images/camera-web.png"> Cameras</a></li>
 											<li id="mUsers"><a id="cUsers" href="javascript:SwitchLayout('Users')"><img src="images/users.png"> Edit Users</a></li>
+											<li id="mUsers"><a id="cUsers" href="javascript:SwitchLayout('Notification')"><img src="images/notification.png"> Send Notification</a></li>
 										</ul>
                                     </li>
                                     <li class="divider"></li>
