@@ -43,7 +43,7 @@ function SendNotification()
 		 async: false, 
 		 dataType: 'json',
 		 success: function(data) {
-			ShowNotify("Notification Send");
+			ShowNotify("Notification Send",2500);
 			return;
 		 },
 		 error: function(){
